[package]
name = "ktroll"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bincode = { version = "2.0.1" }
enigo = { version = "0.6.1", features = ["wayland", "xdo" ] }
rdev = "0.5.3"
tokio = { version = "1.48.0", features = ["full"] }

[[bin]]
name = "ktroller"
path = "src/bin/client.rs"


[[bin]]
name = "ktrolled"
path = "src/bin/server.rs"
